# pykatas

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  kata.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: __init__.py  config.py  extensions.py
app/api/: routes.py
app/models/: submission.py  user.py
app/services/: docker_runner.py  execution_service.py  feedback_parser.py  kata_loader.py
app/static/js/: app.js  submission.js
app/web/: __init__.py  forms.py  routes.py
app/web/static/css/: main.css
app/web/static/js/: submission.js
app/web/templates/: _macros.html  base.html  index.html  kata_detail.html  login.html  profile.html  register.html
app/web/templates/errors/: 404.html  500.html
app/workers/: execute_submission.py
katas/nth_letter/: README.md  kata.yml  reference_solution.py  starter_code.py
katas/nth_letter/tests/: test_hidden.py  test_public.py
katas/shopping_total/: README.md  kata.yml  reference_solution.py  starter_code.py
katas/shopping_total/tests/: test_hidden.py  test_public.py
katas/simple_dictionary/: README.md  kata.yml  reference_solution.py  starter_code.py
katas/simple_dictionary/tests/: test_hidden.py  test_public.py
katas/two_sum/: README.md  reference_solution.py  starter_code.py
katas/two_sum/tests/: test_hidden.py  test_public.py
sandbox/: Dockerfile  runner.py
