[project]
name = "pykatas"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "flask-login>=0.6",
    "flask-wtf>=1.2",
    "psycopg[binary]>=3.2",
    "redis>=5.1",
    "rq>=1.16",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: pure unit tests (no DB, no network)",
    "integration: requires DB or Redis",
    "e2e: requires full stack",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

